--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Trankieu.GitHub.io</title>
+    <title>Trankieu</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/TranKieu">View on GitHub</a>
 
-          <h1 id="project_title">Trankieu.GitHub.io</h1>
+          <h1 id="project_title">Trankieu</h1>
           <h2 id="project_tagline">Hello Word</h2>
 
         </header>
@@ -35,7 +35,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        
       </footer>
     </div>
 
