--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="hello-word" class="anchor" href="#hello-word" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello Word</h3>
-<a href="psd2html\business\">Business</a>
+<a href="psd2html/business/">Business</a>
       </section>
     </div>
 
