--- a/psd2html/business/index.html
+++ b/psd2html/business/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Only for educational purposes. Designed by Tommy-izwebz.com">
-    <title>Busssiness</title>
+    <title>Busssiness - TranKieu.io</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/genericons/genericons.css" type="text/css">
+    <link rel="stylesheet" href="../../css/genericons/genericons.css" type="text/css">
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
