--- a/tab/index.html
+++ b/tab/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html lang="de"><head><meta charset="UTF-8"><title>BiB Link</title><style type ="text/css">
+<!DOCTYPE HTML><html lang="de"><head><meta charset="UTF-8"><title>Bib Link</title><style type ="text/css">
 *{	border:0;	outline:0;	font-size:100%;	vertical-align:baseline; background:transparent;	margin:0;padding:0;}
 ul{	list-style:none;}
 #wrapper {	width: 1100px; 	margin: 30px auto;  position: relative; }
