--- a/tab/index.html
+++ b/tab/index.html
@@ -10,7 +10,7 @@ ul{	list-style:none;}
 .spal4 { position: absolute; top: 0px; left:760px; display:block; width:160px; height: 115px; overflow:hidden;}
 .spal5{ position:absolute; top: 0px; left: 950px; display:block; width:160px; height: 115px; overflow:hidden;}
 span{ position: absolute;bottom: 30px;left: 6px;right: 5px;background: rgba(0,0,0,.3);color: #fff;text-align: center;}
-.quote{ font-size: 1.5rem; margin-top: 50px; margin-right: 80px; margin-left: auto; width: 750px; text-align: right; }
+.quote{ font-size: 1.5rem; margin-top: 50px; margin-right: 80px; margin-left: auto; width: 550px; text-align: right; }
 </style></head><body><div id="wrapper"><div class="zeile"><ul>
 <li><a class="spal0" href="https://trankieu.github.io/ " ><span>HaX</span></a></li>
 <li><a class="spal1" href="https://boerse.to/forum/tutorials.33/" ><span> Boerse </span></a></li>
@@ -43,4 +43,7 @@ span{ position: absolute;bottom: 30px;left: 6px;right: 5px;background: rgba(0,0,
 <li><a class="spal4" href="http://rwetzlmayr.github.io/php-the-right-way/" ><span>php-the-right-way</span></a></li>
 <li><a class="spal5" href="http://www.hackforums.net" ><span> Hackforums</span></a></li>
 </ul></div></div>
-<div class="quote"><q>Nếu bạn đặt mục tiêu và theo đuổi chúng với tất cả lòng quyết tâm, tài năng sẽ đưa bạn tới những nơi khiến bạn phải ngạc nhiên.</q></div></body></html>
+<div class="quote"><q>Thời điểm tốt nhất để làm một việc là ngày hôm qua,
+      thời điểm tốt thứ hai là ngay chính lúc này</q>
+    <br>
+    - Tomorrow is Nerver...</div></body></html>
