--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="de">
-
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="author" content="Viet Dung Tran">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv='refresh' content='0; URL=./veraltet/index.html'>
-
-    <meta name="keywords" content="Android, Android Studio">
-    <title>TranKieu.io</title>
-   
-</head>
-
+  <meta charset="utf-8">
+  <title>Todo</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.e38f004dd9f18a01befc.css"></head>
 <body>
-    
-</body>
-
+  <app-root></app-root>
+<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.6abdde2583a2e01a2350.js" defer></script><script src="main.b7b86da4fc9da7032a44.js" defer></script></body>
 </html>
