--- a/tab/index.html
+++ b/tab/index.html
@@ -13,11 +13,11 @@ span{ position: absolute;bottom: 30px;left: 6px;right: 5px;background: rgba(0,0,
 .quote{ font-size: 1.5rem; margin-top: 50px; margin-right: 80px; margin-left: auto; width: 550px; text-align: right; }
 </style></head><body><div id="wrapper"><div class="zeile"><ul>
 <li><a class="spal0" href="https://trankieu.github.io/ " ><span>HaX</span></a></li>
-<li><a class="spal1" href="https://boerse.to/forum/tutorials.33/" ><span> Boerse </span></a></li>
 <li><a class="spal2" href="http://mygully.com " ><span> mygully</span></a></li>
+<li><a class="spal5" href="https://www.mediaevent.de/tutorial/" ><span>Web-Tut</span></a></li>
 <li><a class="spal3" href="https://translate.google.de/?hl=de&tab=wT" ><span>Translate</span></a></li>
 <li><a class="spal4" href="http://www.bbc.co.uk/vietnamese/english/" ><span>EnglishLernen</span></a></li>
-<li><a class="spal5" href="https://www.mediaevent.de/tutorial/" ><span> JS-DOM</span></a></li>
+<li><a class="spal2" href="https://indepth.dev/" ><span>indepth.dev</span></a></li>
 </ul></div>
 <div class="zeile"><ul>
 <li><a class="spal0" href="https://jaxenter.de/ " ><span>ProgTut</span></a></li>
