--- a/tab/index.html
+++ b/tab/index.html
@@ -15,7 +15,7 @@ span{ position: absolute;bottom: 30px;left: 6px;right: 5px;background: rgba(0,0,
 <li><a class="spal0" href="https://trankieu.github.io/"><span>HaX</span></a></li>
 <li><a class="spal1" href="http://mygully.com "><span> mygully</span></a></li>
 <li><a class="spal2" href="https://indepth.dev/" ><span>indepth.dev</span></a></li>
-<li><a class="spal3" href="https://www.mediaevent.de/tutorial/" ><span>Web-Tut</span></a></li>
+<li><a class="spal3" href="https://www.mediaevent.de/" ><span>Web-Tut</span></a></li>
 <li><a class="spal4" href="https://translate.google.de/?hl=de&tab=wT" ><span>Translate</span></a></li>
 <li><a class="spal5" href="http://www.css3generator.com" ><span> CSSGenerator</span></a></li>
 </ul></div>
@@ -25,22 +25,22 @@ span{ position: absolute;bottom: 30px;left: 6px;right: 5px;background: rgba(0,0,
 <li><a class="spal2" href="https://blog.kulturbanause.de/" ><span>WebDesign</span></a></li>
 <li><a class="spal3" href="https://entwickler.de/online/javascript/" ><span> JSTut</span></a></li>
 <li><a class="spal4" href="https://appdividend.com/category/angular/" ><span> AngularEnglish</span></a></li>
-<li><a class="spal5" href="http://www.bbc.co.uk/vietnamese/english/" ><span>EnglishLernen</span></a></li>
+<li><a class="spal5" href="https://color.adobe.com/de/explore" ><span>Mầu đẹp</span></a></li>
 </ul></div>
 <div class="zeile"><ul>
-<li><a class="spal0" href="https://assets.adobe.com " ><span> Adobe Creative Cloud</span></a></li>
-<li><a class="spal1" href="https://www.materialpalette.com/ " ><span> MaterialColor</span></a></li>
-<li><a class="spal2" href="https://mycolor.space/ " ><span> Color Palettes</span></a></li>
-<li><a class="spal3" href="http://de.365psd.com " ><span> PSD</span></a></li>
-<li><a class="spal4" href="http://wiki.byte-welt.net/wiki/Kategorie:Tutorials_%28Java%29" ><span> JavaTUT </span></a></li>
-<li><a class="spal5" href="http://www.straub.as/java/index.html" ><span>JavaWelt</span></a></li>
+<li><a class="spal0" href="https://www.materialpalette.com/ " ><span>Tạo Material Palette</span></a></li>
+<li><a class="spal1" href="https://mycolor.space/" ><span> Color Palettes</span></a></li>
+<li><a class="spal2" href="https://material.io/resources/color/" ><span>Color mẫu cho App</span></a></li>
+<li><a class="spal3" href="https://heroicons.com/"><span>SVG Icon </span></a></li>
+<li><a class="spal4" href="http://de.365psd.com " ><span>PSD Muster</span></a></li>
+<li><a class="spal5" href="https://assets.adobe.com " ><span> Adobe Creative Cloud</span></a></li>
 </ul></div>
 <div class="zeile"><ul>
-<li><a class="spal0" href="http://code.makery.ch/library/javafx-8-tutorial/" ><span> JavaFX</span></a></li>
+<li><a class="spal0" href="http://www.straub.as/java/index.html" ><span>JavaWelt</span></a></li>
 <li><a class="spal1" href="http://wiki.byte-welt.net/wiki/Entwurfsmuster_%28Design_Patterns%29" ><span>Entwurfsmuster</span></a></li>
 <li><a class="spal2" href="http://eitguide.net/" ><span> AndroidTut</span></a></li>
-<li><a class="spal3" href="https://0x00sec.org/" ><span> Sec</span></a></li>
-<li><a class="spal4" href="https://awesomeopensource.com/projects/rat" ><span>Rat Open Source</span></a></li>
+<li><a class="spal3" href="http://www.bbc.co.uk/vietnamese/english/" ><span>EnglishLernen</span></a></li>
+<li><a class="spal4" href="https://0x00sec.org/" ><span> Sec</span></a></li>
 <li><a class="spal5" href="http://www.hackforums.net" ><span> Hackforums</span></a></li>
 </ul></div></div>
 <div class="quote"><q>Thời điểm tốt nhất để làm một việc là ngày hôm qua,
